fix: #1275 layout issue on mobile

--- a/packages/elements/src/styles/components/layout.scss
+++ b/packages/elements/src/styles/components/layout.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow-y: visible;
   overflow-x: hidden;
 
@@ -18,6 +18,7 @@
   flex-grow: 1;
   margin: 0 auto;
   width: 100%;
+  height: 100%;
 
   &.is-column {
     flex-direction: column;
