--- a/packages/lifetime-legal/src/styles/index.scss
+++ b/packages/lifetime-legal/src/styles/index.scss
@@ -42,3 +42,7 @@ $nav-dimensions: 66px;
 .contentContainer.isDesktop {
   margin-left: 0;
 }
+
+#root {
+  height: 100%;
+}
